<resources>
    <string name="app_name">GeoTracking</string>


    <!--string resources for mainActivity-->
    <string name="mainactivity_welcom_text">Welcome to GeoTracking!</string>
    <string name="mainactivity_trackableButton">Trackable List</string>
    <string name="mainactivity_trackingButton">Tracking List</string>

    <!--string resources for menu-->
    <string name="menu_trackable_list">Show Trackables</string>
    <string name="menu_tracking_list">Show Current Trackings</string>

    <!--string resources for action bar-->
    <string name="actionbar_trackablelist">Trackables</string>
    <string name="actionbar_trackinglist">Trackings</string>

    <!--string resources for modify tracking activity-->
    <string name="modify_tracking_item_name">Trackable Name</string>
    <string name="modify_tracking_item_title">Title</string>
    <string name="modify_tracking_start_time_label">Target Start Time</string>
    <string name="modify_tracking_choose_meet_time">Choose Meet Time</string>
    <string name="modify_tracking_end_time_label">Target End Time</string>
    <string name="modify_tracking_end_time_text">Target End Time Text</string>
    <string name="modify_tracking_meet_location">Meet Location</string>
    <string name="modify_tracking_finish_button">Finish</string>
    <string name="modify_tracking_no_title_message">Please Enter A Title</string>

    <!--string resources for route dialog -->
    <string name="routedialog_locationlabel">Location:  </string>
    <string name="routedialog_timelabel">Time:  </string>
    <string name="routedialog_stoptimelabel">Stop Time:  </string>
    <string name="routedialog_stoptimeunit">   mins</string>

    <!--string resources for trackable list -->
    <string name="sortcategory_message">You have selected  </string>
    <string name="trackablelist_noinfo">No Tracking Information available for this item.
        Please check later.</string>


    <!--string resources for trackinglist -->
    <string name="singletrackingview_editbutton">EDIT</string>
    <string name="viewtracking_confirmButton">OK</string>
    <string name="viewtracking_title">Tracking Information</string>
    <string name="viewtracking_trackableID">Trackable ID</string>
    <string name="viewtracking_trackingID">Tracking ID</string>
    <string name="viewtracking_meettime">Meet Time</string>
    <string name="viewtracking_starttime">Start Time</string>
    <string name="viewtracking_endtime">End Time</string>
    <string name="viewtracking_currentlocation">Current Location</string>
    <string name="viewtracking_meetlocation">Meet Location</string>

    <!--string resources for remove tracking -->
    <string name="removetracking_message">Delete this Tracking?</string>
    <string name="removetracking_toast">Tracking deleted</string>

    <!--string resources for single item view-->
    <string name="single_item_name">item_name</string>
    <string name="single_item_description">item_description</string>
    <string name="single_item_url">item_url</string>
    <string name="single_item_view_button">View</string>
    <string name="single_item_add_button">Add</string>

    <!--string resources for model-->
    <string name="trackmanager_default_category">Select Category</string>

    <!--Strings for suggestion notification-->
    <string name="suggestion_notification_title">Closest Available Trackable</string>
    <string name="suggestion_notification_yes">Yes</string>
    <string name="suggestion_notification_no">No</string>
    <string name="suggestion_notification_cancel">Cancel</string>

    <!--Strings for reminder notification-->
    <string name="reminder_notification_title">Tracking Reminder</string>
    <string name="reminder_notification_dialog1">"You should go to pick up tracking "</string>
    <string name="reminder_notification_dialog2">" now!! "</string>
    <string name="reminder_notification_dismiss">Dismiss</string>
    <string name="reminder_notification_delete">Delete tracking</string>
    <string name="reminder_notification_relater">Remind Me Later</string>

    <!--Strings for Intent keys-->
    <string name="intentkey_notificationid">notificationId</string>
    <string name="intentkey_trackableid">Trackable_Id</string>
    <string name="intentkey_trackingid">TrackingID</string>
    <string name="intentkey_meettime">Meettime</string>
    <string name="intentkey_type">type</string>
    <string name="intentkey_duration">duration</string>


    <!--Strings for Prefernces keys-->
    <string name="prekey_meetbefore">reminderBeforeMeet</string>
    <string name="prekey_remindinterval">reminderTimeInterval</string>

    <!--Strings for Suggestion Notifications -->
    <string name="Spend">"Spend " </string>
    <string name="_mins">" mins to get "</string>
    <string name="question"> " ?" </string>

    <!--Strings for Preference Layout -->
    <string name="preference_tracking_remider_title">Tracking Reminder Setting </string>
    <string name="preference_tracking_dialogue_title">Remind me before Meeting Time </string>
    <string name="preference_tracking_key">reminderBeforeMeet</string>
    <string name="preference_tracking_summary">Edit Buffer Time (mins)</string>
    <string name="preference_tracking_title">Set Buffer Time to Travel</string>

    <string name="preference_tracking_remind_later">Set Remind Me Later</string>
    <string name="preference_tracking_remind_later_key">reminderTimeInterval</string>
    <string name="preference_tracking_remind_later_defer">Edit Defer Time (mins)</string>
    <string name="preference_tracking_remind_later_title">Set Remind Me Later Time</string>

    <string name="preference_suggestion_category_title">Suggestion Polling Time Setting</string>
    <string name="preference_suggestion_dialog_title">Set the Polling Time for Suggestion</string>
    <string name="preference_suggestion_key">PollingTime</string>
    <string name="preference_suggestion_summary">Edit polling time interval for trackable suggestions (sec)</string>
    <string name="preference_suggestion_title">Set Suggestion Time Interval</string>



</resources>
