<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/trackable_item"
        android:layout_width="289dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="11dp"
        android:text="@string/single_item_name"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_description"
        android:layout_width="289dp"
        android:layout_height="25dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/trackable_item"
        android:layout_marginStart="11dp"
        android:text="@string/single_item_description"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/item_url"
        android:layout_width="289dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/item_description"
        android:layout_marginStart="11dp"
        android:text="@string/single_item_url"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="12sp" />

    <Button
        android:id="@+id/item_view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/item_add_button"
        android:layout_alignTop="@+id/trackable_item"
        android:focusable="false"
        android:text="@string/single_item_view_button" />

    <Button
        android:id="@+id/item_add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/trackable_item"
        android:text="@string/single_item_add_button"
        android:focusable="false"/>

</RelativeLayout>