<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    tools:context=".view.ModifyTrackingActivity"
    android:focusable="true">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:labelFor="@+id/item_name"
        android:text="@string/modify_tracking_item_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/item_name"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/modify_tracking_item_title"
        android:inputType="text"
        android:textSize="28sp" />


    <TextView
        android:id="@+id/start_time_label"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/modify_tracking_start_time_label"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/select_start_spinner"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/start_time_label"
        android:layout_marginEnd="25dp"
        android:dropDownWidth="match_parent"
        android:gravity="center"
        android:padding="5dp" />

    <TextView
        android:id="@+id/target_end_time"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="182dp"
        android:gravity="center"
        android:text="@string/modify_tracking_end_time_label"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/end_time_text"
        android:layout_width="241dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/target_end_time"
        android:layout_marginEnd="71dp"
        android:gravity="center"
        android:text="@string/modify_tracking_end_time_text"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/meet_time_label"
        android:layout_width="215dp"
        android:layout_height="38dp"
        android:layout_below="@id/end_time_text"
        android:layout_alignParentStart="true"
        android:text="@string/modify_tracking_choose_meet_time"
        android:textSize="20sp" />


    <Spinner
        android:id="@+id/select_meet_spinner"
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/select_start_spinner"
        android:layout_below="@+id/meet_time_label"
        android:dropDownWidth="match_parent"
        android:gravity="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/meet_location_label"
        android:layout_width="208dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/select_meet_spinner"
        android:layout_marginStart="0dp"
        android:text="@string/modify_tracking_meet_location"
        android:textAlignment="gravity"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/meet_location_text"
        android:layout_width="313dp"
        android:layout_height="43dp"
        android:layout_below="@+id/meet_location_label"
        android:layout_centerHorizontal="true"
        android:text="@string/modify_tracking_meet_location"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/finish_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/meet_location_text"
        android:text="@string/modify_tracking_finish_button" />




</RelativeLayout>