<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">


    <Button
        android:id="@+id/trackable_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="171dp"
        android:layout_height="61dp"
        android:layout_marginBottom="48dp"
        android:text="@string/mainactivity_trackableButton"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:background="@color/design_default_color_primary"
        app:layout_constraintBottom_toTopOf="@+id/tracking_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/tracking_button"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="171dp"
        android:layout_height="61dp"
        android:layout_marginBottom="123dp"
        android:text="@string/mainactivity_trackingButton"
        android:textSize="18sp"
        android:textColor="@color/colorWhite"
        android:background="@color/design_default_color_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trackable_button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="83dp"
        android:layout_marginTop="87dp"
        android:text="@string/mainactivity_welcom_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/trackable_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>